# quase-sem-querer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
src/quase_sem_querer/carregadores/: carregador_contexto.py  carregador_modelo.py
src/quase_sem_querer/contextos/: contexto_2_cad_tec_rj_2019.json  contexto_caderno_tecnico_rj_2019.json  gerador_contexto_operacional.py  super_contexto_in_05_2017.json  super_contexto_vazio.json
src/quase_sem_querer/interface/: app_streamlit.py  arvore_calculo.py  cli.py
src/quase_sem_querer/modelos_normativos/: caderno_tecnico_rj.json  in_05_2017.json
src/quase_sem_querer/motor/: interpretador.py  orquestrador.py  persistencia_contexto.py  persistencia_execucao.py  verificador.py
src/quase_sem_querer/relatorios/: memoria_calculo.py
src/quase_sem_querer/resultados/: formato_resultado_canonico.json
